@@ -146,10 +146,10 @@ static int writestring (int fd, mpg123_string *string)
 	return TRUE;
 }
 
-static size_t readstring (mpg123_string *string, size_t maxlen, FILE *f)
+static size_t readstring (mpg123_string *string, size_t maxlen, int fd)
 {
 	int err;
-	debug2("Attempting readstring on %d for %"SIZE_P" bytes", f ? fileno(f) : 0, (size_p)maxlen);
+	debug2("Attempting readstring on %d for %"SIZE_P" bytes", fd, (size_p)maxlen);
 	string->fill = 0;
 	while(maxlen == 0 || string->fill < maxlen)
 	{
@@ -160,7 +160,7 @@ static size_t readstring (mpg123_string *string, size_t maxlen, FILE *f)
 			string->fill = 0;
 			return 0;
 		}
-		err = read(fileno(f),string->p+string->fill,1);
+		err = read(fd,string->p+string->fill,1);
 		/* Whoa... reading one byte at a time... one could ensure the line break in another way, but more work. */
 		if( err == 1)
 		{
@@ -497,7 +497,6 @@ int http_open(char* url, struct httpdata *hd)
 	int oom  = 0;
 	int relocate, numrelocs = 0;
 	int got_location = FALSE;
-	FILE *myfile = NULL;
 	/*
 		workaround for http://www.global24music.com/rautemusik/files/extreme/isdn.pls
 		this site's apache gives me a relocation to the same place when I give the port in Host request field
@@ -597,15 +596,10 @@ int http_open(char* url, struct httpdata *hd)
 		
 		if(param.verbose > 2) fprintf(stderr, "HTTP request:\n%s\n",request.p);
 		if(!writestring(sock, &request)){ http_failure; }
-		if (!(myfile = fdopen(sock, "rb")))
-		{
-			error1("fdopen: %s", strerror(errno));
-			http_failure;
-		}
 		relocate = FALSE;
 		/* Arbitrary length limit here... */
 #define safe_readstring \
-		readstring(&response, SIZE_MAX/16, myfile); \
+		readstring(&response, SIZE_MAX/16, sock); \
 		if(response.fill > SIZE_MAX/16) /* > because of appended zero. */ \
 		{ \
 			error("HTTP response line exceeds max. length"); \
@@ -673,6 +667,7 @@ int http_open(char* url, struct httpdata *hd)
 				}
 			}
 		} while(response.p[0] != '\r' && response.p[0] != '\n');
+		if (relocate) { close(sock); sock = -1; }
 	} while(relocate && got_location && purl.fill && numrelocs++ < HTTP_MAX_RELOCATIONS);
 	if(relocate)
 	{
